--- a/_sass/_work.scss
+++ b/_sass/_work.scss
@@ -116,7 +116,7 @@ div.work-page-container > .work-images{
 
 div.work-page-container > .work-images > .work-item {
     width: 620px;
-    margin:0 auto;
+    margin:
     float:right;
     padding-right:0;
 }
@@ -125,23 +125,24 @@ div.work-page-container > .work-images > .work-item:not(:first-of-type){
     margin-top: 60px;
 }
 
-/*for 992px or less*/
+}
+
 @media screen and (max-width: 992px) {
 
-div.work-page-container > .work-content > div.work-definition > p{
-    padding-top: 8px;
-    padding-right: 0px;
-    letter-spacing: 0px;
-    line-height: 21px;
-    padding-left: 0px;}
+    div.work-page-container > .work-content > div.work-definition > p{
+        padding-top: 8px;
+        padding-right: 0px;
+        letter-spacing: 0px;
+        line-height: 21px;
+        padding-left: 0px;}
 
-    div.work-page-container > .work-images > img{
-    width: 100%; 
-    min-height: 140px;
-    margin:0 auto;}
+        div.work-page-container > .work-images > img{
+        width: 100%; 
+        min-height: 140px;
+        margin:0 auto;}
 
-    div.work-page-container{
-    padding-top: 20px;
-    width: 100%;
-}
+        div.work-page-container{
+        padding-top: 20px;
+        width: 750px;
+    }
 }  
